NetBSD Problem Report #37026

From juan@xtrarom.org  Tue Sep 25 17:22:28 2007
Return-Path: <juan@xtrarom.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 5537863B8C2
	for <gnats-bugs@gnats.NetBSD.org>; Tue, 25 Sep 2007 17:22:28 +0000 (UTC)
Message-Id: <20070925172227.1C2F516A8E@nocturno>
Date: Tue, 25 Sep 2007 19:22:27 +0200 (CEST)
From: xtraeme@gmail.com
Reply-To: xtraeme@gmail.com
To: gnats-bugs@NetBSD.org
Subject: userconf(4) doesn't work with vesafb(4)
X-Send-Pr-Version: 3.95

>Number:         37026
>Category:       port-i386
>Synopsis:       userconf(4) doesn't work with vesafb(4)
>Confidential:   no
>Severity:       serious
>Priority:       high
>Responsible:    jmcneill
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Sep 25 17:25:00 +0000 2007
>Closed-Date:    Tue Feb 17 18:24:41 +0000 2009
>Last-Modified:  Tue Feb 17 18:24:41 +0000 2009
>Originator:     xtraeme@gmail.com
>Release:        NetBSD 4.99.31
>Organization:
Juan Romero Pardines	- The NetBSD Project
http://plog.xtrarom.org	- NetBSD/pkgsrc news in Spanish
>Environment:
System: NetBSD nocturno 4.99.31 NetBSD 4.99.31 (Nocturno) #10: Tue Sep 25 18:18:47 CEST 2007 juan@nocturno:/home/juan/build/i386/obj/sys/arch/i386/compile/Nocturno i386
Architecture: i386
Machine: i386
>Description:
	Using a kernel with vesafb(4) enabled seems to hung when
	trying to access to userconf(4) via boot -c.

>How-To-Repeat:
	boot -c and it will hung.
>Fix:
	Yes, please.

>Release-Note:

>Audit-Trail:
   20080421 dholland: updated xtraeme's mail

From: "Jared D. McNeill" <jmcneill@invisible.ca>
To: gnats-bugs@NetBSD.org
Cc: port-i386-maintainer@netbsd.org, gnats-admin@netbsd.org,
	netbsd-bugs@netbsd.org
Subject: Re: port-i386/37026: userconf(4) doesn't work with vesafb(4)
Date: Tue, 25 Sep 2007 14:34:34 -0400 (EDT)

 On Tue, 25 Sep 2007, juan@xtrarom.org wrote:
 >> Description:
 > 	Using a kernel with vesafb(4) enabled seems to hung when
 > 	trying to access to userconf(4) via boot -c.

 vesafb_cnattach is a noop because it is called too early (before kvm86 is 
 initialized). This is why userconf fails; vesafb is not actually attached 
 at this point.

 Possible workarounds include early probe and init of vesafb, or allowing 
 vga to early attach and taking ownership of the console when vesafb 
 attaches later on.

 Cheers,
 Jared

Responsible-Changed-From-To: port-i386-maintainer->jmcneill
Responsible-Changed-By: jmcneill@NetBSD.org
Responsible-Changed-When: Tue, 17 Feb 2009 00:11:51 +0000
Responsible-Changed-Why:
This should be easy to fix now with the new generic framebuffer code.


State-Changed-From-To: open->feedback
State-Changed-By: jmcneill@NetBSD.org
State-Changed-When: Tue, 17 Feb 2009 01:43:15 +0000
State-Changed-Why:
Should be resolved now, can you confirm?


From: "Jared D. McNeill" <jmcneill@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/37026 CVS commit: src/sys/arch/x86
Date: Tue, 17 Feb 2009 01:42:52 +0000 (UTC)

 Module Name:	src
 Committed By:	jmcneill
 Date:		Tue Feb 17 01:42:52 UTC 2009

 Modified Files:
 	src/sys/arch/x86/conf: files.x86
 	src/sys/arch/x86/x86: consinit.c
 Added Files:
 	src/sys/arch/x86/include: genfb_machdep.h
 	src/sys/arch/x86/x86: genfb_machdep.c

 Log Message:
 PR# port-i386/37026: userconf(4) doesn't work with vesafb(4)

 Add early console support for x86 genfb.


 To generate a diff of this commit:
 cvs rdiff -r1.44 -r1.45 src/sys/arch/x86/conf/files.x86
 cvs rdiff -r0 -r1.1 src/sys/arch/x86/include/genfb_machdep.h
 cvs rdiff -r1.16 -r1.17 src/sys/arch/x86/x86/consinit.c
 cvs rdiff -r0 -r1.1 src/sys/arch/x86/x86/genfb_machdep.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: feedback->closed
State-Changed-By: jmcneill@NetBSD.org
State-Changed-When: Tue, 17 Feb 2009 18:24:41 +0000
State-Changed-Why:
Fixed in -current, thanks for the report!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.