PR# port-i386/37026: userconf(4) doesn't work with vesafb(4)

Add early console support for x86 genfb.